Added more details

--- a/Info.html
+++ b/Info.html
@@ -5,22 +5,22 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
+<div class="content">
     <p>
-        <center><img src="Images/ReviveYouthLogo-White.png" width="200" height="100" alt="Revive Youth Logo">
-            <div class = "horizontalwhiteline"></div>
+        <img src="Images/ReviveYouthLogo-White.png" alt="Revive Youth Logo">
+            <div class="horizontalwhiteline"></div>
             <br>
-        <img src="Images/ImpactLogo-White.jpg" width="200" height="80"alt="Impact Youth Logo"> 
+        <img src="Images/ImpactLogo-White.jpg" alt="Impact Youth Logo"> 
     </p>
         <br><br>
 
         <table>
-            <tr style=color:yellow>
+            <tr>
               <th>OPEN TO</th>
               <th>LOCATION</th>
               <th>STUDENT FEE</th>
             </tr>
-            <tr style=color:white>
+            <tr>
               <td>AGES 13-19</td>
               <td>THOUSAND PINES</td>
               <td>$190</td>
@@ -28,26 +28,26 @@
           </table>
           <br> 
 
-          <h4 style=color:white>CONTACT</h4>
-          <ul style=color:white list-style-type=bullet>
+          <h4>CONTACT</h4>
+          <ul id="ul01">
             <li>Miles Abracosa (310) 562 - 0705</li>
             <li>Joy Ramos (562) 453 - 9014</li>
             <li>Jedi Ces (562) 215 - 9019</li>
           </ul>
           <br><br>
 
-          <h4 style=color:white>SPEAKERS</h4>
-          <ul style=color:white list-style-type=square>
+          <h4>SPEAKERS</h4>
+          <ul id="ul02">
             <li>Pastor Mike Joanitis</li>
             <li>Pastor Ken Santos</li>
           </ul>   
           <br><br>
 
     <p>
-        <a href="FET-Week7-Coding-Assignment.html">Main Page</a>
+        <a href="FET-Week8-Coding-Assignment.html">Main Page</a>
           &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="Sponsor.html">Give / Sponsor</a>
     </p>
-
+</div>
 </body>
 </html>
