--- a/FET-Week8-Coding-Assignment.html
+++ b/FET-Week8-Coding-Assignment.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
+<div class="content">
     <p>
-        <center><img src="Images/ReviveYouthLogo-White.png" width="200" height="100" alt="Revive Youth Logo">
-            <div class = "horizontalwhiteline"></div>
+        <img src="Images/ReviveYouthLogo-White.png" alt="Revive Youth Logo">
+            <div class="horizontalwhiteline"></div>
             <br>
-        <img src="Images/ImpactLogo-White.jpg" width="200" height="80"alt="Impact Youth Logo"> 
+        <img src="Images/ImpactLogo-White.jpg" alt="Impact Youth Logo"> 
     </p>
         <br>
     <p>
@@ -26,7 +26,7 @@
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="Sponsor.html">Give / Sponsor</a>
     </p>
-
+</div>
 </body>
 </html>
 
